--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "antd": "^5.20.3",
     "concurrently": "^8.2.2",
-    "framer-motion": "^11.3.30"
+    "framer-motion": "^11.3.30",
+    "multer": "^1.4.5-lts.1",
+    "react-flags-select": "^2.2.3",
+    "react-hook-form": "^7.53.0"
+  },
+  "devDependencies": {
+    "@types/multer": "^1.4.12"
   }
 }
