--- a/server/package.json
+++ b/server/package.json
@@ -40,6 +40,7 @@
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
+    "multer": "^1.4.5-lts.1",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.23.8"
   }
