--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.20.3",
     "framer-motion": "^11.3.31",
+    "jwt-decode": "^4.0.0",
     "notiflix": "^3.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -21,6 +22,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
     "swiper": "^11.1.10",
     "tippy.js": "^6.3.7"
