--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/jwt-decode": "^3.1.0",
     "antd": "^5.20.3",
+    "dayjs": "^1.11.13",
     "framer-motion": "^11.3.31",
     "jwt-decode": "^4.0.0",
     "notiflix": "^3.2.7",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-flags-select": "^2.2.3",
     "react-hook-form": "^7.53.0",
