--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.1",
     "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
