--- a/client/package.json
+++ b/client/package.json
@@ -18,14 +18,13 @@
     "jwt-decode": "^4.0.0",
     "notiflix": "^3.2.7",
     "react": "^18.3.1",
-    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
-    "react-flags-select": "^2.2.3",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.26.1",
+    "react-spinners": "^0.14.1",
     "redux-persist": "^6.0.0",
     "sonner": "^1.5.0",
     "swiper": "^11.1.10",
