--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "notiflix": "^3.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flags-select": "^2.2.3",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
