--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.13",
     "framer-motion": "^11.3.31",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.0",
     "notiflix": "^3.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
