--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,7 @@
     "express": "^4.19.2",
     "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
+    "meilisearch": "^0.42.0",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
     "stripe": "^16.9.0",
